[gd_scene load_steps=7 format=3 uid="uid://bc7ka0053noyb"]

[ext_resource type="Script" path="res://scripts/UI/Menu.gd" id="1_s7svw"]
[ext_resource type="Texture2D" uid="uid://ddwqkefwe2dr" path="res://assets/gfx/Menu/Backgrounds/BGMenu.png" id="2_pdvhk"]
[ext_resource type="Texture2D" uid="uid://cfpjjajl6dbry" path="res://assets/gfx/UI/Buttons/HowTo.png" id="3_gsirn"]
[ext_resource type="Texture2D" uid="uid://bb11d5mgl0vsl" path="res://assets/gfx/UI/Buttons/Play.png" id="4_ocmno"]
[ext_resource type="AudioStream" uid="uid://c3tijyvbg4uo4" path="res://assets/sfx/Themes/Main_Menu_Theme.wav" id="4_put7u"]
[ext_resource type="Texture2D" uid="uid://bxdsm38cmjt6v" path="res://assets/gfx/UI/Buttons/Quit.png" id="5_8cq76"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_s7svw")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.619)
texture = ExtResource("2_pdvhk")

[node name="Controls" type="TextureButton" parent="."]
offset_left = -297.0
offset_top = 235.0
offset_right = 729.0
offset_bottom = 820.0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(513, 292.5)
texture_normal = ExtResource("3_gsirn")
ignore_texture_size = true
stretch_mode = 3

[node name="StartButton" type="TextureButton" parent="."]
offset_left = -196.0
offset_top = 106.0
offset_right = 1350.0
offset_bottom = 692.0
scale = Vector2(0.21, 0.21)
pivot_offset = Vector2(773, 293)
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_ocmno")
ignore_texture_size = true
stretch_mode = 3

[node name="QuitButton" type="TextureButton" parent="."]
offset_left = 442.0
offset_top = 235.0
offset_right = 1465.0
offset_bottom = 824.0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(511.5, 294.5)
texture_normal = ExtResource("5_8cq76")
ignore_texture_size = true
stretch_mode = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_put7u")
autoplay = true

[connection signal="mouse_entered" from="Controls" to="." method="_on_controls_mouse_entered"]
[connection signal="mouse_exited" from="Controls" to="." method="_on_controls_mouse_exited"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="mouse_entered" from="StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
